LUCENE-2488: Support build with JDK 1.4 and exclude Java 1.5 contrib modules on request (pass '-Dforce.jdk14.build=true') when compiling/testing/packaging. This marks the benchmark contrib also as Java 1.5, as it depends on fast-vector-highlighter.
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_2_9@951767 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/ant/build.xml
+++ b/contrib/ant/build.xml
@@ -33,7 +33,7 @@
                refid="additional.dependencies"
   />
 
-  <target name="compile-core" depends="common.compile-core">
+  <target name="compile-core" depends="contrib-build.compile-core">
     <copy todir="${build.dir}/classes/java">
       <fileset dir="src/java" includes="**/*.xml"/>
     </copy>
