--- a/contrib/benchmark/build.xml
+++ b/contrib/benchmark/build.xml
@@ -5,6 +5,9 @@
         Lucene Benchmarking Contributions
     </description>
 
+    <property name="javac.source" value="1.5" />
+    <property name="javac.target" value="1.5" />
+
     <import file="../contrib-build.xml"/>
     <property name="working.dir" location="work"/>
 
@@ -161,11 +164,11 @@
       </subant>
     </target>
 
-    <target name="init" depends="common.init,compile-demo,compile-memory,compile-highlighter,compile-vector-highlighter,check-files"/>
+    <target name="init" depends="contrib-build.init,compile-demo,compile-memory,compile-highlighter,compile-vector-highlighter,check-files"/>
 
     <!-- make sure online collections (reuters) are first downloaded -->
     <target name="test" depends="init,get-files">
-      <antcall target="common.test" inheritRefs="true" />
+      <antcall target="contrib-build.test" inheritRefs="true" />
     </target>
     
 </project>
