--- a/contrib/benchmark/build.xml
+++ b/contrib/benchmark/build.xml
@@ -71,7 +71,7 @@
         </delete>
 
     </target>
-    <target name="extract-reuters" depends="check-files" unless="reuters.extracted">
+    <target name="extract-reuters" depends="check-files,compile-core" unless="reuters.extracted">
         <mkdir dir="${working.dir}/reuters-out"/>
         <java classname="org.apache.lucene.benchmark.utils.ExtractReuters" maxmemory="1024M" fork="true">
             <classpath refid="run.classpath"/>
