LUCENE-2488: Only extract reuters if contrib was really built!
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_2_9@951790 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/benchmark/build.xml
+++ b/contrib/benchmark/build.xml
@@ -71,7 +71,7 @@
         </delete>
 
     </target>
-    <target name="extract-reuters" depends="check-files,compile-core" unless="reuters.extracted">
+    <target name="extract-reuters" depends="check-files,compile-core" unless="reuters.extracted" if="build.this.contrib">
         <mkdir dir="${working.dir}/reuters-out"/>
         <java classname="org.apache.lucene.benchmark.utils.ExtractReuters" maxmemory="1024M" fork="true">
             <classpath refid="run.classpath"/>
